--- a/static/css/style.css
+++ b/static/css/style.css
@@ -391,3 +391,455 @@ input[type="checkbox"]:checked + label.custom-checkbox {
     background-color: #2196F3;
     color: white;
 }
+
+body {  /*cuerpo*/
+  margin: 0;
+  margin-top: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  justify-content: center;
+  box-sizing: border-box;
+  background-image: url(fondo1.png);
+  animation: fondo-animado 5s infinite;
+}
+
+@keyframes fondo-animado {
+    0%   { background-image: url(../img/fondo1.png); transition: background-image 0.1s; } 
+    25%  { background-image: url(../img/fondo2.png); transition: background-image 0.1s; }
+    50%  { background-image: url(../img/fondo3.png); transition: background-image 0.1s; }
+    75%  { background-image: url(../img/fondo2.png); transition: background-image 0.1s; }
+    100% { background-image: url(../img/fondo1.png); transition: background-image 0.1s; } 
+  }
+
+header { /*encabezado*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #e7e7e7;
+  background-color: transparent;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0;
+}
+
+
+.contacto { /*botón de contacto*/
+font-family: "Poppins", sans-serif;
+position: relative;
+display: inline-block;
+margin: 15px;
+padding: 10px 25px;
+text-align: center;
+font-size: 15px;
+letter-spacing: 1px;
+text-decoration: none;
+color: white;
+background: transparent;
+cursor: pointer;
+transition: ease-out 0.5s;
+border: 2px solid #8b72e0;
+border-radius: 10px;
+box-shadow: inset 0 0 0 0 #8b72e0;
+}
+
+.contacto:hover {
+color: white;
+box-shadow: inset 0 -100px 0 0 #8b72e0;
+}
+
+.contacto:active {
+transform: scale(0.9);
+}
+
+.modal{
+z-index: 2;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+backdrop-filter: blur(10px);
+display: flex;
+opacity: 0;
+pointer-events: none;
+transition: opacity .6s .9s;
+--transform: translateY(-100vh);
+--transition: transform .8s;
+}
+
+.modal--show{
+opacity: 1;
+pointer-events: unset;
+transition: opacity .6s;
+--transform: translateY(0);
+--transition: transform .1s .1s;
+}
+
+.modal__container{
+margin: auto;
+width: 90%;
+max-width: 600px;
+max-height: 90%;
+background-color: #fff;
+border-radius: 6px;
+padding: 3em 2.5em;
+display: grid;
+gap: 1em;
+place-items: center;
+grid-auto-columns: 100%;
+transform: var(--transform);
+transition:var(--transition);
+}
+
+.cardContainer {
+width: fit-content;
+position: relative;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.card {
+position: relative;
+width: 250px;
+height: 250px;
+align-items: center;  /* Keeps the image vertically centered */
+justify-content: center; /* Keeps the image horizontally centered */
+padding: 10px 10px;
+border-radius: 10px;
+backdrop-filter: blur(30px);
+background-color: rgba(65, 65, 65, 0.308);
+border: 1px solid rgba(255, 255, 255, 0.089);
+}
+
+img {
+width: 100%;  /* Increase width beyond card size */
+height: 100%; /* Increase height beyond card size */
+object-fit: contain; /* Center and crop if necessary */
+align-items: center;  /* Keeps the image vertically centered */
+justify-content: center; /* Keeps the image horizontally centered */
+}
+
+
+
+.max {
+align-items: flex-start;
+border-left: 2px solid white;
+}
+
+.maxHeading,
+.minHeading {
+font-size: 0.7em;
+font-weight: 600;
+color: white;
+}
+
+.maxTemp,
+.minTemp {
+font-size: 0.6em;
+font-weight: 500;
+color: rgb(197, 197, 197);
+}
+
+.cardContainer::before {
+width: 100px;
+height: 100px;
+content: "";
+position: absolute;
+background-color: rgb(139, 255, 168);
+z-index: -1;
+border-radius: 50%;
+left: 100px;
+top: 100px;
+transition: all 1s;
+}
+
+.cardContainer:hover::before {
+transform: translate(-70px, 50px);
+}
+
+
+.modal__title{
+font-size: 2.5rem;
+}
+
+.modal__paragraph{
+margin-bottom: 10px;
+}
+
+.modal__img{
+width: 90%;
+max-width: 300px;
+}
+
+.btn__cerrar{
+padding: 1.3em 3em;
+font-size: 12px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 500;
+color: #000;
+text-decoration: none;
+background-color: #d6d6d6;
+border: none;
+border-radius: 45px;
+box-shadow: 10px 50px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
+
+.btn__cerrar:hover{
+background-color: #23c483;
+box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+color: #fff;
+transform: translateY(-7px);
+}
+
+.btn__cerrar:active{
+transform: translateY(-1px);
+}
+
+
+@media (max-width:800px) {
+.nav__list{
+    display: none;
+}
+}
+
+.logo img {
+position: relative;
+display: flex;
+height: 120px; 
+transform: translateY(8%);
+left: 20%; 
+}
+
+.formulario {
+display: flex;
+padding-top: 20px;
+position: relative;
+width: 400px;
+height: 500px;
+top: 120px;
+left: 60%;
+z-index: 1;
+background:  linear-gradient(#1f1f1f, #1f1f1f) padding-box,linear-gradient(145deg, transparent 35%,#ec43ff, #4bccff) border-box;
+border: 2px solid transparent;
+font-size: 14px;
+color: white;
+display: flex;
+flex-direction: column;
+gap: 20px;
+box-sizing: border-box;
+border-radius: 16px;
+background-size: 300% 100%;
+animation: gradient 5s ease infinite;
+}
+
+
+
+@keyframes gradient {
+0% {
+  background-position: 0% 50%;
+}
+
+50% {
+  background-position: 100% 50%;
+}
+
+100% {
+  background-position: 0% 50%;
+}
+}
+
+.formulario h1 {
+  text-align: center;
+  color: rgb(240, 240, 240);
+  font-weight: 500;
+  margin-bottom: -10px;
+}
+
+.formulario form{
+  height: 350px;
+  padding: 10px 30px 50px 30px;
+  box-sizing: border-box;;
+  border-radius: 0px 0px 33px 35px;
+}
+
+.formulario form[action="../templates/index.html"]{
+height: 350px;
+padding: 10px 30px 50px 30px;
+box-sizing: border-box;;
+border-radius: 0px 0px 33px 35px;
+}
+
+form .username{
+  margin: 40px 0;
+}
+
+.username {
+  display: flex;
+  align-items: center; 
+  position: relative; 
+}
+
+.username input {
+font-family: "Poppins", sans-serif;
+font-size: 14px;
+width: 100%;
+padding: 15px 16px;
+border-radius: 8px;
+color: #fff;
+background-color: transparent;
+border: 1px solid #414141;
+}
+
+.username label{
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  color: #979797;
+  transform: translateY(-50%);
+  font-size: 14px;
+  pointer-events: none;
+  transition: .5s ease-in-out;
+}
+
+
+.fa-user{
+  position: absolute;
+  font-size: 18px;
+  color: #a8a8a8;
+  right: 15px;
+  top: 30%;
+}
+
+.fa-lock{
+  position: absolute;
+  font-size: 18px;
+  color: #a8a8a8;
+  right: 15px;
+  top: 30%;
+}
+
+.username input:focus ~ label,
+.username input:valid ~ label{
+  top: -15px;
+  color: #ad55ff;
+  opacity: 1;
+}
+
+
+.recordar{
+  margin: -5px 0 20px 5px;
+  color: #5263c4;
+  cursor: pointer
+}
+
+.recordar:hover{
+  text-decoration: underline;
+}
+
+input[type="submit"] {
+  margin-top: 20px;
+  width: 100%;
+  height: 50px;
+  background: #d6d6d6;
+  background-size: cover;
+  border: none;
+  border-radius: 25px;
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(99, 99, 99);
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+input[type="submit"]:hover {
+  background: linear-gradient(90deg, rgba(173, 96, 255, 1) 0%, rgba(86, 126, 255, 1) 100%);
+  color: white;
+}
+
+input[type="submit"]:focus {
+  transform: scale(0.98); 
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+/* Estilo personalizado para el botón */
+label.custom-checkbox {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Cambia el fondo cuando la casilla está marcada */
+input[type="checkbox"]:checked + label.custom-checkbox {
+  background-color: #2196F3;
+  color: white;
+}
+
+.info {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  width: 320px;
+  padding: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  background: linear-gradient(90deg, rgba(149,88,146,1) 0%, rgba(74,74,200,1) 100%, rgba(0,212,255,1) 100%);
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px -3px #111;
+  position: absolute;
+  top: -50px; /* Posición inicial fuera de la pantalla */
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  animation: slideDown 0.2s ease-in-out forwards, slideUp 0.2s ease-in-out 5s forwards;
+}
+
+@keyframes slideDown {
+  0% {
+    top: -50px; /* Posición inicial fuera de la pantalla */
+    opacity: 0; /* Empieza transparente */
+  }
+  100% {
+    top: 20px; /* Posición final */
+    opacity: 1; /* Termina opaco */
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    top: 20px;
+    opacity: 1;
+  }
+  100% {
+    top: -50px;
+    opacity: 0;
+  }
+}
+
+.info__icon {
+width: 20px;
+height: 20px;
+transform: translateY(-2px);
+margin-right: 30px;
+}
+
+.info__icon path {
+fill: #fff;
+}
+
+.info__title {
+font-weight: 500;
+font-size: 14px;
+color: #fff;
+}
