--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- servita te soplaron el bistec -->
+
 
 <head>
     <meta charset="UTF-8">
@@ -134,7 +136,7 @@
                                 <span class="job-type-btn" name="job-type" data-job-type="camisa">Camisa</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="neoflex">Neoflex</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="corte-v">Corte V</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="acrilico">Acrílico</span>
+                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
 
                             </div>
