--- a/templates/home.html
+++ b/templates/home.html
@@ -133,9 +133,9 @@
                                 <span class="job-type-btn" name="job-type" data-job-type="presentacion">Presentación</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="volantes">Volantes</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="banderín">Banderín</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="camisa">Camisa</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="neoflex">Neoflex</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="corte-v">Corte V</span>
+                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
+                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
+                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
 
