--- a/templates/home.html
+++ b/templates/home.html
@@ -133,7 +133,7 @@
                                 <span class="job-type-btn" name="job-type" data-job-type="valla-publicitaria">Valla Publicitaria</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="presentacion">Presentación</span>
                                 <span class="job-type-btn" name="job-type" data-job-type="volantes">Volantes</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="banderín">Banderín</span>
+                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
                                 <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
