--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
     <nav class="sidebar close">
         <header>
@@ -40,7 +38,6 @@
                             <span class="text nav-text">Inicio</span>
                         </a>
                     </li>
-
                     <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
@@ -56,7 +53,6 @@
                         <span class="text nav-text">Salir</span>
                     </a>
                 </li>
-
                 <li class="">
                     <a href="../templates/settings.html">
                         <i class='bx bx-cog icon'></i>
@@ -82,8 +78,8 @@
             <button class="add-btn" type="button">
                 <span class="button__text">Añadir</span>
                 <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
-                        xmlns="http://www.w3.org/2000/svg">
+                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                        width="24" xmlns="http://www.w3.org/2000/svg">
                         <line x1="12" x2="12" y1="5" y2="19"></line>
                         <line x1="5" x2="19" y1="12" y2="12"></line>
                     </svg></span>
@@ -99,7 +95,7 @@
                     </div>
                     <form class="add-form" action="{{ url_for('form') }}" method="post">
                         <div class="form-group">
-                            <label for="surname">Titulo:</label>
+                            <label for="title">Título:</label>
                             <input type="text" id="title" name="title" required>
                         </div>
                         <div class="form-row">
@@ -125,19 +121,61 @@
                         <div class="form-group">
                             <label>Tipo de trabajo:</label>
                             <div class="job-type-buttons">
-                                <span class="job-type-btn" name="job-type" data-job-type="pendon" value="pendon">Pendón</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="vinilo">Vinilo</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="estructura">Estructura</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="valla-publicitaria">Valla Publicitaria</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="presentacion">Presentación</span>
-                                <span class="job-type-btn" name="job-type" data-job-type="volantes">Volantes</span>
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-                                <input type="checkbox" name="job-type" autocomplete="off" checked value="pendon"> Mi botón
-
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Pendon" onchange="updatePreview()"> 
+                                    <span class="custom-checkbox"></span>
+                                    Pendón
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Vinilo" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Vinilo
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Estructura" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Estructura
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Valla-publicitaria" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Valla Publicitaria
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Presentacion" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Presentación
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Volantes" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Volantes
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Banderin" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Banderín
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Camisa" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Camisa
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Neoflex" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    NeoFlex
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Corte-v" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Corte V
+                                </label>
+                                <label class="job-type-btn">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="Acrilico" onchange="updatePreview()">
+                                    <span class="custom-checkbox"></span>
+                                    Acrílico
+                                </label>
                             </div>
                         </div>
                         <div class="form-row">
@@ -156,19 +194,18 @@
                         </div>
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="description">Descripción</label>
-                                <textarea id="description" name="description" rows="4" required
-                                    style="resize: none;"></textarea>
+                                <label for="description">Descripción:</label>
+                                <textarea id="description" name="description" rows="4" required style="resize: none;"></textarea>
                             </div>
                             <div class="form-group">
-                                <label class="custum-file-upload" for="file">Imagen
-                                    <div class="form-group upload-box">
-                                        <div class="upload-icon-container">
-                                            <i class="fas fa-upload"></i>
-                                            <span>Subir archivo</span>
-                                            <input type="file" id="file" onchange="previewImage(this)">
-                                        </div>
+                                <label class="custum-file-upload" for="file">Imagen</label>
+                                <div class="form-group upload-box">
+                                    <div class="upload-icon-container">
+                                        <i class="fas fa-upload"></i>
+                                        <span>Subir archivo</span>
+                                        <input type="file" id="file" onchange="previewImage(this)">
                                     </div>
+                                </div>
                             </div>
                         </div>
                         <div class="form-row">
@@ -211,11 +248,11 @@
                     <span class="card-lastname">{{item[2]}}</span>
                 </p>
                 <p class="card-info">
-                    <span class="job-title">Designer</span> <span class="date">13/02/04</span> <span class="phone"><i
-                            class="fas fa-phone"></i>{{item[1]}}</span>
+                    <span class="job-title">Designer</span>
+                    <span class="date">13/02/04</span>
+                    <span class="phone"><i class="fas fa-phone"></i>{{item[1]}}</span>
                 </p>
-                <p class="card-description">A "designer" is a design expert. This description can be expanded upon to
-                    highlight their skills and experience.</p>
+                <p class="card-description">A "designer" is a design expert. This description can be expanded upon to highlight their skills and experience.</p>
                 <div class="arrow">
                     <i class="fas fa-arrow-right card-icon"></i>
                 </div>
@@ -226,5 +263,5 @@
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
 </body>
-
 </html>
+
