--- a/templates/home.html
+++ b/templates/home.html
@@ -189,7 +189,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="remaining">Restante:</label>
-                                <input type="number" id="remaining" name="remaining" required>
+                                <input type="number" id="remaining" name="remaining" required readonly>
                             </div>
                         </div>
                         <div class="form-row">
