--- a/static/css/main.css
+++ b/static/css/main.css
@@ -371,6 +371,7 @@ body.dark .home .text {
     transition: border 0.5s ease;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-list .card-item .card-title,
@@ -461,10 +462,42 @@ body.dark .home .text {
     margin-top: auto;
     transition: 0.2s ease;
 }
-
 .card-list .card-item:hover .arrow {
-    background: #756fd6;
-    color: #fff;
+    background: transparent; /* Cambia a transparente o la propiedad que desees */
+    /* Color solo se aplicará cuando se haga hover sobre el arrow directamente */
+}
+
+.card-list .card-item .delete {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    color: #616161;
+    border-radius: 50%;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+.card-list .card-item:hover .delete {
+    background: transparent; /* Cambia a transparente o la propiedad que desees */
+    /* Color solo se aplicará cuando se haga hover sobre delete directamente */
+}
+
+.card-list .card-item .delete:hover {
+    background: #ff6d6d; /* Aquí el color de hover específico para .delete */
+    color: #fff; /* Color del icono de delete al hover */
+}
+
+.card-list .card-item .arrow:hover {
+    background: #756fd6; /* Aquí el color de hover específico para .arrow */
+    color: #fff; /* Color del icono de arrow al hover */
+}
+
+.card-list .card-item .actions {
+    display: flex; /* Usar flexbox para alineación */
+    justify-content: space-between; /* Colocar espacios entre los elementos */
+    align-items: center; /* Centrar verticalmente los elementos */
+    width: 100%; /* Asegúrate de que ocupa el 100% del ancho del contenedor */
 }
 
 /* Dark Mode Styles */
@@ -664,6 +697,15 @@ body.dark .home-header .add-btn .button__text {
     font-weight: 600;
 }
 
+.preview-job-title {
+    display: inline-block;
+    max-width: 180px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  
+
 .preview-card-item .preview-phone {
     background-color: #c3d3fd;
     color: #2e2e2e;
@@ -837,6 +879,25 @@ body.dark .home-header .add-btn .button__text {
     cursor: pointer;
 }
 
+.submit-btn:hover {
+    background-color: #5c4ef8; /* Color más oscuro al pasar el ratón */
+}
+
+.reset-btn {
+    padding: 0.5rem 1rem;
+    background-color: #f86363;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.reset-btn:hover {
+    background-color: #e64341; /* Color más oscuro al pasar el ratón */
+}
+
+
 .form-row {
     display: flex;
     gap: 1rem;
@@ -910,6 +971,12 @@ body.dark .home-header .add-btn .button__text {
     right: 30px;
 }
 
+.add-modal .reset-btn {
+    position: absolute;
+    bottom: 30px;
+    right: 180px;
+}
+
 .preview-section {
     display: flex;
     flex-direction: column;
@@ -962,3 +1029,56 @@ body.dark .home-header .add-btn .button__text {
     opacity: 0.8;
   }
   
+  .confirmation-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
+}
+
+.confirmation-modal .modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
+}
+
+.modal-actions {
+    margin-top: 20px;
+}
+
+.confirm-btn, .cancel-btn {
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.confirm-btn {
+    background-color: #60b36e;
+    color: #fff;
+}
+
+.cancel-btn {
+    background-color: #ff5b5b;
+    color: #fff;
+}
+
+.confirmation-modal.hidden {
+    transform: scale(1.2);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.confirmation-modal.visible {
+    opacity: 1;
+    visibility: visible;
+}
