clients barra de navegacion
123qwe123qwe

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -41,6 +41,12 @@
                         </a>
                     </li>
                     <li class="nav-link">
+                        <a href="../templates/clients.html"> <!-- Cambia esta línea, para que apunte a tu HTML -->
+                            <i class='bx bx-user icon'></i> <!-- Puedes cambiar el ícono si lo deseas -->
+                            <span class="text nav-text">Clientes</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text nav-text">Estadísticas</span>
