--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,8 @@
                     <img src="../static/img/icon.ico" alt="iconcopy">
                 </span>
                 <div class="text logo-text">
-                    <span class="name">{{user}}</span>
-                    <span class="profession">@cargo</span>
+                    <span class="name">{{user[0]}}</span>
+                    <span class="profession">{{user[1]}}<</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
