--- a/templates/clients.html
+++ b/templates/clients.html
@@ -21,8 +21,8 @@
                     <img src="../static/img/icon.ico" alt="iconcopy">
                 </span>
                 <div class="text logo-text">
-                    <span class="name">{{user}}</span>
-                    <span class="profession">@cargo</span>
+                    <span class="name">{{user[0]}}</span>
+                    <span class="profession">{{user[1]}}</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
@@ -130,32 +130,15 @@
         </div>
         <div class="modal-backdrop hidden"></div>
         <div class="card-list-client">
+            {% for item in cliente %}
+            <a href="https://www.google.com">
             <div class="card-client">
                 <img src="../static/img/user-default.png" alt="User Image">
-                <p class="default-client-name">Lionel Pepsi</p>
-                <p class="client-company">Narcotrafico</p>
+                <p class="default-client-name">{{item[0]}}</p>
+                <p class="client-company">{{item[1]}}</p>
             </div>
-            <div class="card-client">
-                <img src="../static/img/user-default.png" alt="User Image">
-                <p class="default-client-name">Vegetta777</p>
-                <p class="client-company">Youtuber</p>
-            </div>
-            <div class="card-client">
-                <img src="../static/img/user-default.png" alt="User Image">
-                <p class="default-client-name">Capriles</p>
-                <p class="client-company">Alcaldia</p>
-            </div>
-            <div class="card-client">
-                <img src="../static/img/user-default.png" alt="User Image">
-                <p class="default-client-name">Edmundo</p>
-                <p class="client-company">Presidente</p>
-            </div>
-            <div class="card-client">
-                <img src="../static/img/user-default.png" alt="User Image">
-                <p class="default-client-name">Kawasaki</p>
-                <p class="client-company">Prostituta</p>
-            </div>
-
+            </a>    
+            {% endfor %}
     </section>
 
     <script src="../static/js/home.js"></script>
