--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
                 </span>
                 <div class="text logo-text">
                     <span class="name">{{user[0]}}</span>
-                    <span class="profession">{{user[1]}}<</span>
+                    <span class="profession">{{user[1]}}</span>
                 </div>
             </div>
             <i class='bx bx-chevron-right toggle'></i>
