--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="../templates/clients.html"> <!-- Cambia esta línea, para que apunte a tu HTML -->
+                        <a href="{{ url_for('clients') }}"> <!-- Cambia esta línea, para que apunte a tu HTML -->
                             <i class='bx bx-user icon'></i> <!-- Puedes cambiar el ícono si lo deseas -->
                             <span class="text nav-text">Clientes</span>
                         </a>
