--- a/templates/clients.html
+++ b/templates/clients.html
@@ -35,13 +35,13 @@
                 </li>
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="../templates/clients.html"> <!-- Cambia esta línea, para que apunte a tu HTML -->
+                        <a href="{{ url_for('clients') }}"> <!-- Cambia esta línea, para que apunte a tu HTML -->
                             <i class='bx bx-user icon'></i> <!-- Puedes cambiar el ícono si lo deseas -->
                             <span class="text nav-text">Clientes</span>
                         </a>
