--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
                 </li>
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
